cloud_secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud
