cloud_backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
    tier: backend
  name: mariadb
  namespace: cloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
      tier: backend
  template:
    metadata:
      labels:
        app: nextcloud
        tier: backend
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.7
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
      restartPolicy: Always
      volumes:
      - name: mariadb-data
        hostPath:
          path: "/k8s-data/db"
          type: Directory
