cloud_backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: cloud
  labels:
    app: nextcloud
    tier: backend
spec:
  ports:
    - protocol: TCP
      port: 3306
  selector:
    app: nextcloud
    tier: backend
