cloud_frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app: nextcloud
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: nextcloud
    tier: frontend
