cloud_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: cloud
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: cloud.au-lab.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
